@startuml
'https://plantuml.com/sequence-diagram

class MainProgram{
    main()
    start()
}

class InventoryItem{
    itemValue: String
    itemSerialNumber: String
    itemName: String

    InventoryItem(itemValue, itemSerialNumber, itemName)

    getItemValue()
    getItemSerialNumber()
    getItemName()
    setItemValue(String itemValue)
    setItemSerialNumber(String itemSerialNumber)
    setItemName(String itemName)
}

class InventoryItemController{
    ItemSearch: TextField
    ItemName: TextField
    ItemSerialNumber: TextField
    ItemValue: TextField
    myToDoTable: TableView<InventoryItem>
    InventoryItemSerialNumberColumn: TableColumn<InventoryItem, String>
    InventoryItemNameColumn: TableColumn<InventoryItem, String>
    InventoryItemValueColumn: TableColumn<InventoryItem, String>
    fileChooser: FileChooser

    ImportFileButtonClicked()
    ExportFileButtonClicked()
    AddItemButtonClicked()
    DeleteItemButtonClicked()
    DeleteAllButtonClicked()
    EditItemButtonClicked()

    dataList: ObservableList<InventoryItem>

    initialize()

    AddItemToTable()
    isItemNameValid()
    isItemSerialNumberValid()
    isItemSerialNumberValidWhenEditing()
    isItemValueValid()
    isItemValid()
    isItemValidWhenEditing()
    ItemSerialExists()
    ItemSerialExistsWhenEditing()

    RemoveItem()
    RemoveAll()
    modifyItemInformation()
    ItemIsSelected()
    ItemIsUnselected()
    SortByName()

    OpenFileChooserExport()
    OpenFileChooserImport()

    getValue(InventoryItem item)
}

class ErrorMessageController{
    showErrorMessageSerialNumberExists(String SN)
    showErrorMessageSerialNumberLength()
    showErrorMessageSerialNumberInvalid()
    showErrorMessageBadValue()
    showErrorMessageNullValue()
    showErrorMessageInvalidNameLength()
}

class ExportItemController{
    saveDataToFile(File file, String filetype)
    convertDataToTSV()
    saveFileAsTSV(File file)

    convertDataToHTML()
    saveFileAsHTML(File file)

    convertDataToJSON()
    saveFileAsJSON(File file)

    getFileExtension(File file)
}

class ImportItemController{
    readDataFromFile(File file, String filetype)
    removeLastCharacter(String fileData)
    readFromTSV(File file)
    readFromHTML(File file)
    readFromJSON(File file)
    ItemSerialExistsWhenImporting(String serial)
}

javafx.InventoryController <-- MainProgram
MainProgram --> InventoryItemController
InventoryItem --> InventoryItemController
InventoryItemController <--> ImportItemController
InventoryItemController <--> ExportItemController
InventoryItemController --> ErrorMessageController

@enduml